--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -59,13 +59,27 @@ data:
             }
 
             location /mainapi {
+                rewrite ^/mainapi/?(.*) /$1 break;
 
+                #proxy_redirect off;
+                #proxy_set_header X-Real-IP $remote_addr;
+                # proxy_set_header Host $http_host;
+                # proxy_set_header X-NginX-Proxy true;
+                # proxy_set_header X-Real-IP $remote_addr;
+                # proxy_set_header X-Real-IP-proxy $proxy_protocol_addr;
+                # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                #Aggiunto i seguenti per pbm SSE http come descritto al seguente link
+
+                proxy_set_header Connection '';
                 proxy_http_version 1.1;
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection "upgrade";
-                #proxy_set_header Host $host;
+                chunked_transfer_encoding off;
+                proxy_buffering off;
+                proxy_cache off;
+                proxy_read_timeout 86400s; 
 
-                #rewrite ^/mainapi/?(.*) /$1 break;
                 proxy_pass http://mainapi:5001;
             }
 
