--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -59,7 +59,7 @@ data:
             }
 
             location /mainapi {
-                rewrite ^/mainapi/?(.*) /$1 break;
+                #rewrite ^/mainapi/?(.*) /$1 break;
 
                 #proxy_redirect off;
                 #proxy_set_header X-Real-IP $remote_addr;
