--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -59,12 +59,13 @@ data:
             }
 
             location /mainapi {
-                rewrite ^/mainapi/?(.*) /$1 break;
+                #rewrite ^/mainapi/?(.*) /$1 break;
 
+                proxy_set_header Host $http_host;
+                proxy_set_header X-Real-IP $remote_addr;
                 proxy_http_version 1.1;
                 proxy_set_header Upgrade $http_upgrade;
                 proxy_set_header Connection "upgrade";
-                proxy_set_header Host $host;
 
                 proxy_pass http://mainapi:5001;
             }
