--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -59,7 +59,7 @@ data:
             }
 
             location /mainapi2 {
-                #rewrite ^/mainapi2/?(.*) /$1 break;
+                #rewrite ^/mainapi2?(.*) /$1 break;
 
                 proxy_set_header Host $http_host;
                 proxy_set_header X-Real-IP $remote_addr;
@@ -67,7 +67,7 @@ data:
                 proxy_set_header Upgrade $http_upgrade;
                 proxy_set_header Connection "upgrade";
 
-                proxy_pass mainapi:5001;
+                proxy_pass http://mainapi:5001;
             }
 
             location /serversdata/ {
