--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -7,7 +7,7 @@ data:
   nginx.conf: |
     user nginx;
     worker_processes auto;
-    error_log /var/log/nginx/error.log warn;
+    error_log /var/log/nginx/error.log debug; # Imposta il livello di log su debug per gli errori
     pid /var/run/nginx.pid;
 
     events {
@@ -15,6 +15,8 @@ data:
     }
 
     http {
+        access_log /var/log/nginx/access.log main; # Abilita i log di accesso
+
         server {
             client_max_body_size        20000M;
             proxy_connect_timeout       600;
