--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -155,21 +155,45 @@ spec:
 ---
 
 apiVersion: networking.istio.io/v1beta1
+kind: Gateway
+metadata:
+  name: "inmind-gateway"
+spec:
+  selector:
+    istio: ingressgateway
+  servers:
+  - hosts:
+    - "*"
+    port:
+      name: http
+      number: 80
+      protocol: HTTP
+    tls:
+      httpsRedirect: false
+
+---
+
+apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
-  name: mainapi-rewrite-virtual-service
+  name: "inmind-virtual-service"
 spec:
+  gateways:
+  - "inmind-gateway"
   hosts:
-    - "reverseproxy"
+  - "*"
   http:
-    - match:
-        - uri:
-            prefix: "/mainapi2"
-      rewrite:
-        uri: "/"
-      route:
-        - destination:
-            host: mainapi
-            port:
-              number: 5001
+  - match:  # NOTE (1)
+    - uri:
+        prefix: /mainapi2/
+    - uri:
+        prefix: /mainapi2
+    rewrite:
+      uri: /
+    route:
+    - destination:
+        host: mainapi.default.svc.cluster.local
+        port:
+          number: 5001
+
 
