--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -187,7 +187,7 @@ spec:
     - uri:
         prefix: "/mainapi/"
     rewrite:
-      uri: "/"
+      uri: ""
     route:
     - destination:
         host: mainapi
